﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.46 (Beta 3)
+ Added "column_sizes" and "row_sizes" properties to wxGrid.
  Resizing the columns/rows by dragging is the easiest way to use these.
^ Reorganized wxGrid properties.

06/13/2007 Version 3.00.45 (Beta 3)
* Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."
+ Added support for context-sensitive help.
  To Use:
  Set the Project's "help_provider" property to one of the help providers listed.
  Set the "context_help" wxWindow property on any widget.
  wxMSW: Use the wxDIALOG_EX_CONTEXTHELP extra style on the dialog or frame.
  Others: Add a wxContextHelpButton by using wxStdDialogButtonSizer.
^ Updated the about dialog to include more details about the people involved in
  the project.

06-06-2007 Version 3.00.44 (Beta 3)
* Fixed FS#193 - "Missing wxTE_PROCESS_ENTER in style of wxComboBox."
* Fixed FS#178 - "crash using toolbar"
* Fixed sizeritem properties updating in property grid when modified via toolbar.
+ Added FS#179 - "OnPaint for wxPanel."
+ Added wxStaticText::Wrap().
+ Implemented FS#192 - "Add support for dynamic event handling via Connect() methods."
  Connect() is now the default implementation of event handling.
  See the "event_generation" property of the Project object.
+ Added CustomControl - This allows the user to generate arbitrary code for a 
  control which is not yet fully supported by wxFormBuilder.
^ Updated a bunch of icons. This completes the new theme in wxFormBuilder.
+ Added wxHyperlinkCtrl.

05-29-2007 Version 3.00.43 (Beta 3)
^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
  All notebooks can now be configured by right-clicking in empty area of tab bar.
* Fixed FS#190 - "annoying warning with wxTR_HIDE_ROOT in wxTreeCtrl"
+ Implemented FS#185 - "Allowing access to wxStdDialogButtonSizer buttons."
+ Added many more properties to wxGrid.